--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,67 @@
 .App {
+    min-height: 100vh;
     text-align: center;
 }
 
 .App h1 {
-    font-size: 5vw;
+    font-size: 6rem;
+    color: transparent;
+    -webkit-text-stroke: 2px wheat;
 }
 
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.delete {
+    color: red;
+    cursor: pointer;
+}
+
+.todo__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.todo__item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    font-size: 1.5rem;
+    line-height: 1.4;
+}
+
+.todo__input {
+    margin: 30px;
+    padding: .25rem 0;
+    border: 0;
+    border-bottom: 1px solid wheat;
+    outline: 0;
+    background-color: transparent;
+    color: #fff;
+    font-size: 1.6rem;
+    letter-spacing: .125rem;
+}
+
+.btn {
+    padding: 0.25rem 0.55rem;
+    border: 0;
+    border-radius: 10px;
+    outline: 0;
+    background-color: transparent;
+    color: wheat;
+    font-size: 1.2rem;
+    letter-spacing: .125rem;
+    box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+
+
+}
+
+input:checked + span {
+    text-decoration: line-through;
 }
